force-app/main/default/objects/CWS_Gainsight_Info__c/CWS_Gainsight_Info__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Information supporting the Gainsight integration.</description>
    <label>CWS_Gainsight_Info</label>
</CustomObject>