force-app/main/default/objects/CWS_Gainsight_Info__c/fields/CWS_GSeventName__c.field-meta.xml
<CustomField>
    <fullName>CWS_GSeventName__c</fullName>
    <label>GSeventName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>