force-app/main/default/objects/CWS_Gainsight_Info__c/fields/CWS_GStenantId__c.field-meta.xml
<CustomField>
    <fullName>CWS_GStenantId__c</fullName>
    <label>GStenantId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>