force-app/main/default/objects/CWS_Gainsight_Info__c/fields/CWS_GStopicName__c.field-meta.xml
<CustomField>
    <fullName>CWS_GStopicName__c</fullName>
    <label>GStopicName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>